# kube

./: .rustfmt.toml  Cargo.toml  cAdvisor.yaml  ca.crt  cadvisor_metric_format.txt  client.crt  client.key  flake.nix  justfile  readme.md  stress.yaml
k3d_files/: stress.yaml  worked.yaml
src/: lib.rs  main.rs  temp.rs
src/client/: client.rs  config.rs  deployment.rs  error.rs  errors.rs  get_deployments.rs  get_nodes.rs  get_pods.rs  get_replicasets.rs  input.rs  mod.rs  nodes.rs  parse_json_pod.rs  validate_target.rs  validate_targets.rs
src/client/daemon_set/: get.rs  mod.rs  watch.rs
src/client/old/: errors.rs  pods.rs  replicasets.rs  targets.rs  validate_namespace.rs
src/client/old/watchers/: nodes.rs  watcher.rs
src/client/watchers/: mod.rs  replica_sets.rs
src/config/: mod.rs
src/initialization/: deployment.rs  mod.rs  node.rs  pod.rs  replicaset.rs
src/k8s_client/: mod.rs
src/metrics/: controller.rs  mod.rs  node.rs  querier.rs  total.rs
src/metrics_collector/: collector.rs  mod.rs
src/metrics_collector/tasks/: collector_task.rs  json_parser_task.rs  mod.rs  query_task.rs
src/metrics_collector/watchers/: mod.rs  nodes.rs  pods.rs
