[package]
name = "kube"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features =  ["full"] } 
tokio-util = "0.7.16"
k8s-openapi = { version = "0.25", features = ["v1_33"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
base64 = "0.22.1"
openssl-sys = "0.9"
openssl = { version = "0.10" }
serde = "1.0"
serde_yaml = { version = "0.9" }
serde_json = "1.0.143"
futures-util = "0.3.31"
futures = "0.3.31"
bytes = "1.10.1"
futures-core = "0.3.31"
